--- a/css/componentes/corpo.css
+++ b/css/componentes/corpo.css
@@ -21,7 +21,7 @@
     border: 2px solid var(--cor-secundaria);
     padding: 0.5em;
     width: 340px;
-    height: 485px;
+    min-height: 300px;
     border-radius: 0.5em;
 }
 
@@ -34,4 +34,13 @@
     text-align: center;
     font-size: large;
     border-radius: 0.3em 0.3em 0 0;
+}
+
+@media screen and (max-width: 1100px) {
+    .container {
+        width: 95vw;
+    }
+    .conteudo__fotos {
+        gap: 0.1 em;
+    }
 }
