--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@
 :root {
     --cor-primaria: #135D66;
     --cor-secundaria: #E3FEF7;
-    --cor-primaira-maior: #003C43;
+    --cor-primaria-maior: #003C43;
     --cor-secundaria-maior: #77B0AA;
     --fonte-primaria: 'Poppins';
 }
